# IntelliDoc

./: .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docgen.yml
api/: README.md  app.py  requirements.txt
api/models/: __init__.py
api/routers/: docs.py
cli/: README.md  main.py
docs/: README.md
docs/source/: conf.py  index.rst
intellidoc/: __init__.py  cli.py
scripts/: README.md  process_doc.py
tests/: test_core.py  test_smoke.py
web/: README.md
