[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellidoc"
version = "0.0.1"
description = "AI-powered documentation generator for repositories"
readme = "README.md"
authors = [
  { name="JTall1ne", email="YOUR_EMAIL_HERE" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28",
  "pyyaml>=6.0",
  "click>=8.0",
]

[project.scripts]
intellidoc = "intellidoc.cli:main"
