[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellidoc"
version = "0.1.0"
description = "AI-powered multi-model documentation generator for repositories"
readme = "README.md"
authors = [
  { name="JTall1ne" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
  # Core dependencies
  "requests>=2.28",
  "pyyaml>=6.0",
  "click>=8.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  # AI/ML dependencies
  "openai>=1.0",
  "anthropic>=0.18.0",
  "transformers>=4.39.0",
  "torch>=2.0.0",
  # Code analysis
  "tree-sitter>=0.20.0",
  "tree-sitter-languages>=1.10.2",
  "gitpython>=3.1.0",
  # API dependencies
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.0",
  # Utilities
  "python-dotenv>=1.0.0",
  "aiohttp>=3.9.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
intellidoc = "intellidoc.cli:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
